kube/minio/service-s3.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-s3
  namespace: minio
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-pass-headers: "Host"
spec:
  selector:
    app: minio
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP  # Use LoadBalancer if you need external access
