kube/minio/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-ui
  namespace: minio
spec:
  selector:
    app: minio
  ports:
    - protocol: TCP      
      port: 9090
      targetPort: 9090
  type: ClusterIP  # Use LoadBalancer if you need external access
