kube/minio/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-api
  namespace: minio
spec:
  rules:
  - host: api.minio.tithia.scio.services
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9000
  tls:
  - hosts:
    - api.minio.tithia.scio.services
    secretName: api-minio-tithia-scio-services-tls
