kube/minio/ingress-s3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-s3
  namespace: minio
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100g"
spec:
  rules:
  - host: s3.minio.tithia.scio.services
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-s3
            port:
              number: 9000
  tls:
  - hosts:
    - s3.minio.tithia.scio.services
    secretName: s3-minio-tithia-scio-services-tls
