kube/minio/ingress-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ui
  namespace: minio
spec:
  rules:
  - host: minio.tithia.scio.services
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9001
  tls:
  - hosts:
    - minio.tithia.scio.services
    secretName: minio-tithia-scio-services-tls
